--- a/z_doc/静态文件/面对面支付.html
+++ b/z_doc/静态文件/面对面支付.html
@@ -6,7 +6,7 @@
     <meta name="format-detection" content="telephone=no,email=no">
     <link rel="stylesheet" type="text/css" href="css/reset.css">
     <link rel="stylesheet" type="text/css" href="css/main.css">
-    <script type="text/javascript" src="flexible.js"></script>
+    <script type="text/javascript" src="js/flexible.js"></script>
 </head>
 <body id="facetoface" class="wrapper">
     <div id="main">
